# GhostList

./: .env.example  .gitignore  .replit  README.md  install.sh  main.py  pyproject.toml  requirements.txt  run.py  server.py  supabase_client.py  test_connection.py  troubleshooting.md  verify_supabase.py
data/: channels.json
